# algorithms-lib-cpp

./: CMakeLists.txt  Doxyfile  Makefile  README.md
console_app/: CMakeLists.txt  main.cpp  s21_console_app.cpp  s21_console_app.hpp
dot_examples/: a.dot  adj_matrix_FW.txt  adj_matrix_ant_algo.txt  adj_matrix_dij.txt  adj_matrix_directed.txt  adj_matrix_error.txt  adj_matrix_error_file.txt  adj_matrix_loop.txt  adj_matrix_neg_num.txt  adj_matrix_weighted.txt  b.dot  genetic_matrix.txt  output.dot
lib/: CMakeLists.txt
lib/s21_list/: CMakeLists.txt  s21_list.hpp
lib/s21_queue/: CMakeLists.txt  s21_queue.hpp
lib/s21_stack/: CMakeLists.txt  s21_stack.hpp
source/graph/: CMakeLists.txt  s21_graph.cpp  s21_graph.hpp
source/graph_algorithms/: CMakeLists.txt  s21_graph_algorithms.cpp  s21_graph_algorithms.hpp
tests/: CMakeLists.txt
tests/graph_algorithms_tests/: CMakeLists.txt  graph_algorithms_tests.cpp
tests/graph_tests/: CMakeLists.txt  graph_tests.cpp  wei_result.txt
